--- a/content/pages/rules/architecture/062/index.adoc
+++ b/content/pages/rules/architecture/062/index.adoc
@@ -67,3 +67,15 @@ such as code signing or sub-resource integrity.
 The application must not load or execute code from untrusted sources,
 such as loading includes, modules, plugins, code, or libraries from untrusted
 sources or the Internet.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.2 RESTful Web Service Verification Requirements.(13.2.2)]
+Verify that *JSON* schema validation is in place and verified before accepting
+input.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.3 SOAP Web Service Verification Requirements.(13.3.1)]
+Verify that *XSD* schema validation takes place to ensure a properly formed
+*XML* document,
+followed by validation of each input field before any processing of that data
+takes place.
