--- a/content/pages/rules/source/173/index.adoc
+++ b/content/pages/rules/source/173/index.adoc
@@ -355,3 +355,10 @@ rejected with appropriate headers
 V13.2 RESTful Web Service Verification Requirements.(13.2.2)]
 Verify that *JSON* schema validation is in place and verified before accepting
 input.
+
+. [[r44]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V13.3 SOAP Web Service Verification Requirements.(13.3.1)]
+Verify that *XSD* schema validation takes place to ensure a properly formed
+*XML* document,
+followed by validation of each input field before any processing of that data
+takes place.
