--- a/content/pages/about-us/index.adoc
+++ b/content/pages/about-us/index.adoc
@@ -4,19 +4,20 @@
 
 = About Us
 
-`Fluid Attacks` specializes in red team operations and technology development
-that supports the hacking of its clients' systems.
-`Fluid Attacks` provides speed, precision, and scalability to hacking projects
-that identify all vulnerabilities in systems.
+At `Fluid Attacks` we specialize in red team operations
+as well as technology development
+that continuously enhances our security testing services.
+We provide speed, precision, and scalability to hacking projects
+which identify all vulnerabilities in our clients' systems.
 
 Since *2001*, `Fluid Attacks` has been developing technology
 focused on cybersecurity.
-It has offered ethical hacking and pentesting services
-to companies in the banking, financial, technology, healthcare, insurance,
-manufacturing, and airline industries, among others.
-It implements more than *200* projects a year
-and helps its clients manage their cybersecurity risks.
-It also helps them certify that their systems,
+We offer ethical hacking and pentesting services
+to companies in a wide range of industries, including banking,
+finance, technology, healthcare, insurance, manufacturing, and airline.
+With the implementation of over *200* projects a year,
+we help our clients manage their cybersecurity risks,
+thus ensuring that the systems,
 which are critical to their operations,
 are safe for their users.
 `Fluid Attacks'` security experts specialize in continuous hacking
