--- a/new/content/pages/products/drills/index.adoc
+++ b/new/content/pages/products/drills/index.adoc
@@ -6,59 +6,54 @@
 = Drills
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
-== Severity of Tested Requirements
+== Selection of Security Requirements
 
 [role="fw1 f-key-features lh-key-features"]
-You are able to decide which security requirements will be tested on each
-ethical hacking (profiling). You will know the exact severity for each hacking
+You are able to decide which security requirements will be tested
+during each ethical hacking assignment: PCI, HIPAA, OWASP, NIST, GDPR.
+You will know the exact severity of each hacking project
 (for inspected and uninspected profiled requirements).
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Vulnerabilities Management Platform
 
 [role="fw1 f-key-features lh-key-features"]
-Security analysts report findings in Integrates, the communication, monitoring
-and reporting platform for projects.
+Findings are reported in Integrates, Fluid Attacks' platform
+that allows control of the vulnerability testing and remediation processes.
 You can use it to access general information about each finding,
 check its remediation status, classify it according to age,
-visualize real-time project statistics and progress, as well as other
-functionalities.
+visualize real-time system statistics and progress,
+as well as other functionalities.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Remediation
-{nbsp} +
 
 [role="fw1 f-key-features lh-key-features"]
-Multiple finding validation cycles are performed
-during the subscription period.
+Multiple finding validation cycles are performed.
 You can check if any findings have been successfully closed
 as many times as you require.
-In order to perform this remediation validation, you must first define
-the treatment used to remediate the vulnerability and then request,
-through Integrates, a finding validation.
-You can request clarification on any issue
-by directly contacting Fluid Attacks' hackers also through Integrates.
+In order to perform this remediation validation,
+you must define the treatment used
+and then proceed to request a finding validation.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
-== Healthcheck
-{nbsp} +
-{nbsp} +
+== Health Check
 
 [role="fw1 f-key-features lh-key-features"]
-All versions of existing code should be attacked up to the subscription start
-point, in addition to the monthly test limit.
-A healthcheck is intended to catch
-up with the development team within the first *3* months of subscription.
-Then the continuous hacking advances simultaneously with the development.
+All versions of existing code should be attacked up
+to the subscription start point, in addition to the monthly test limit.
+A health check is scheduled at the beginning of the subscription
+in order to catch up with the development team.
+Then, the continuous hacking advances
+simultaneously with the development.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
-== Critical Information Extraction and Information Removal
+== Critical Information Extraction
 
 [role="fw1 f-key-features lh-key-features"]
-Whenever findings indicate the need to obtain information, the extraction is
-done to maximize finding impacts without compromising sensitive information.
-*7* days after a customer approves their final report all information gathered
-during ethical hacking is deleted securely from all *Fluid Attacks’* systems.
+Whenever findings indicate the need to obtain information,
+the extraction is done to maximize finding impacts
+without compromising sensitive information.
 
 [role="w-25-ns w-90 dib-ns dn tl v-top pa3"]
 == {nbsp}
