--- a/new/content/pages/products/integrates/index.adoc
+++ b/new/content/pages/products/integrates/index.adoc
@@ -6,13 +6,13 @@
 = Integrates
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
-== Project Indicators and Status Graphs
+== System Indicators and Status Graphs
 
 [role="fw1 f-key-features lh-key-features"]
 Integrates provides you with information about the current
-status of your project such as: 1) the number of
-security vulnerabilities identified; 2) the current threat
-level that those vulnerabilities pose to your
+security status of all your company's applications such as:
+1) the number of security vulnerabilities identified;
+2) the current threat level that those vulnerabilities pose to your
 organization, and 3) the vulnerabilities that have already
 been remediated.
 
@@ -37,13 +37,13 @@ require immediate attention based on parameters
 including: Age, Severity, Status (Open/Closed) and
 Resolution options (Accepted/New/In Progress/Indefinitely Accepted).
 After a vulnerability has been remediated
-you can ask FA for documentation.
+you can ask Fluid Attacks for documentation.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
 == Forces and Exploitation-Animation
 
 [role="fw1 f-key-features lh-key-features"]
-Within Integrates, Forces (Fluid Attacks' service)
+Within Integrates, Forces (Fluid Attacks' product)
 displays the diagnostic script used to expose, or exploit,
 a security vulnerability. This same script can also be
 used to verify that your company's solution to a
@@ -64,15 +64,9 @@ security breach in a real attack. All events that inhibit
 the testing can also be viewed in Integrates in real time.
 
 [role="w-25-ns w-90 dib tl v-top pa3"]
-== Chat with Us + Email Notification
+== Chat With Us + Email Notification
 
 [role="fw1 f-key-features lh-key-features"]
-When Drills (Fluid Attacks' service) is purchased,
-Fluid Attacks will provide a private forum where your company
-and Fluid Attacks can post messages about any relevant
-aspect of the project. To ensure that the client company
-receives timely communication, an email notification is
-also sent when a response to a client message has been posted.
-Email notifications are also sent about changes made
-to the vulnerabilities, comments made about them, and
-variations in their status.
+When Drills (Fluid Attacks' product) is purchased,
+Fluid Attacks will provide continuous support via chat and email
+to the development team in order to help them reach high remediation rates.
