--- a/new/content/pages/use-cases/continuous-hacking/vuln-manage/index.adoc
+++ b/new/content/pages/use-cases/continuous-hacking/vuln-manage/index.adoc
@@ -1,16 +1,17 @@
 :slug: use-cases/continuous-hacking/vuln-manage/
 :description: Check the overall data and remediation status of each finding, and the project progress in real-time with Integrates, our Vulnerability Management Platform.
 :keywords: Fluid Attacks, Services, Continuous Hacking, Ethical Hacking, Pentesting, Security, Integrates, Vulnerability, Remediation
-:nextpage: use-cases/continuous-hacking/mock-attacks/
+:nextpage: use-cases/continuous-hacking/break-build/
 :category: continuous-hacking
 :section: Continuous Hacking
 :template: use-cases/feature
 
 = Vulnerability Management Platform
 
-link:../../../products/integrates/[*Integrates*] is the project communication,
-monitoring, and reporting platform.
+link:../../../products/integrates/[*Integrates*] is the platform that allows control
+in the testing and remediation processes of vulnerabilities.
 It can be used to access general data on each finding.
-It also allows you to check their remediation status and classify them by age.
-In addition, it displays stats and project progress in real-time,
-among other things.
+It also allows you to check the findings' remediation status
+and classify them by age.
+In addition, it displays stats
+and project progress in real time, among other things.
