refac(doc): #3502 breaking the build update image
- The image of averages on Breaking the Build page was updated


Former-commit-id: c7995abfde0ebea179bbba586354faf59103d48c

--- a/content/pages/events/breaking-the-build/index.adoc
+++ b/content/pages/events/breaking-the-build/index.adoc
@@ -40,11 +40,11 @@ Thereby, we could reach, in the last six months, an average of:
 [frame="none",cols=2,caption=""]
 |====
 a|[caption=""]
-.Average of all systems 2018/01/01 - 2019/04/24
+.Average of all systems, 2020/01/01 - 2020/07/15
 image::global-average.png[Average of deployments to production in all systems]
 a|[caption=""]
-.Systems with higher average 2018/01/01 - 2019/04/24
-image::max-average.png[Systems with higher deploys to production]
+.Highest average in a system, 2020/01/01 - 2020/07/15
+image::max-average.png[The highest average in a system]
 |====
 
 == 2. Content
