refac(cross): #3444 recover deleted keywords
- Some deleted keywords were recovered


Former-commit-id: 6b95a0381ed5c5a6873339d2981ae3a57761e3d2

--- a/content/pages/services/comparative/index.adoc
+++ b/content/pages/services/comparative/index.adoc
@@ -1,7 +1,7 @@
 :slug: services/comparative/
 :category: services
 :description: Know the differences between continuous hacking and one-shot hacking offered by Fluid Attacks.
-:keywords: Fluid Attacks, Ethical Hacking, Pentesting, Comparison, Company
+:keywords: Fluid Attacks, Ethical Hacking, Pentesting, Comparison, Company, Continuous Hacking, One-Shot Hacking
 :usecasespage: yes
 :yes: image:../../images/icons/yes.png[yes]
 :no: image:../../images/icons/no.png[no]
