--- a/content/pages/events/live-hacking/index.adoc
+++ b/content/pages/events/live-hacking/index.adoc
@@ -1,7 +1,7 @@
 :slug: events/live-hacking/
 :category: events
 :description: The Live Hacking event shows the process of finding and exploiting security vulnerabilities, explaining how they're generated from the source code.
-:keywords: Fluid Attacks, Live Hacking, Security, Event, Vulnerabilities, Source Code, Ethical Hacking, Pentesting
+:keywords: Fluid Attacks, Live Hacking, Security, BWAPP, Event, Vulnerabilities, Source Code, Ethical Hacking, Pentesting
 :eventspage: yes
 
 = Live Hacking
